# hashcomp

./: CMakeLists.txt
res/realKVdata/: clickstream.tsv
src/bench/: tracer.h
src/bwtree/: atomic_stack.h  bwtree.h
src/bwtree/benchmark/art/: art.c  art.h
src/bwtree/benchmark/libcuckoo/: cuckoohash_map.hh  cuckoohash_util.hh  default_hasher.hh  lazy_array.hh
src/bwtree/benchmark/spinlock/: spinlock.cpp  spinlock.h
src/bwtree/benchmark/stx_btree/: btree.h  btree_multimap.h
src/bwtree/peloton/master/: bwtree_index.cpp
src/faster/api/: basickvtypes.h  ckvcontext.h  cvkvcontext.h  faster.h  kvcontext.h  kvcontext_full.h  serializablecontext.h  stringcontext.h
src/faster/cc/: checkpoint_locks.h  internal_contexts.h
src/faster/core/: key_hash.h
src/faster/io/: native_buffer_pool.h  persistent_memory_malloc.h
src/faster/memory/: malloc_fixed_page_size.h
src/faster/misc/: thread.h  utility.h
src/ichash/: LockFreeCuckoo.h  LockFreeCuckoo1.h  allocator_new.h  assert_msg.h  brown_reclaim.h  bucket_container.hh  buffer_stack.h  cuckoo_map.h  cuckoohash_config.hh  cuckoohash_util.hh  entry_def.h  generator.h  hash_func.h  ihazard.h  item.h  kick_haza_pointer.h  new_bucket_container.hh  new_map.hh  reclaimer_debra.h  reclaimer_def.h  threadworkmanager.h  ycsb_loader.h
src/ichash/reclaimer/: allocator_new.h  brown_reclaim.h  buffer_stack.h  cdebra.h  cdebra_group.h  cdrbea_def.h  cebr_token.h  def.h  ihazard.h  interface.h
src/ichash/reclaimer/brown/: allocator_bump.h  blockbag.h  blockpool.h  bst.h  bst_impl.h  chromatic.h  configure_gstats.h  descriptors_impl.h  errors.h  gstats.h  hashtable.h  plaf.h  pool_perthread_and_shared.h  random.h  reclaimer_batchhp.h  reclaimer_debra.h  reclaimer_debraplus.h  (+6 more)
src/levelhash/: level_hashing.h
src/mhash/: concurrent_hash_map.h  fast_table.h  thread.cpp  trick_concurrent_hash_map.cpp  trick_concurrent_hash_map.h
src/mhash/epoch/: faster_epoch.h
src/mhash/hazard/: adaptive_hazard.h  batch_hazard.h  brown_debra.h  brown_ebr_token.h  brown_hazard.h  brown_reclaim.h  hash_hazard.h  ihazard.h  memory_hazard.h  mshazrd_pointer.h  opthazard_pointer.h  wrapper_epoch.h
src/whash/: hashmap.h
stream/: CMakeLists.txt
stream/src/cfrequent/: Frequency.h  LossyCount.h  prng.cc  prng.h  rand48.cc  rand48.h
stream/src/concisereplacement/: ConciseARCAlgorithm.h  ConciseLFUAlgorithm.h  ConciseLRUAlgorithm.h
stream/src/heavyhitter/: Frequency.h  Frequent.h  GeneralLazySS.h  GroupFrequent.h  LazySpaceSaving.h  SpaceSaving.h  Structure.h
stream/src/quantile/: Frequency.h  Frequent.h  GK.h  Structure.h
stream/src/replacealgo/: ARCAlgorithm.h  DefaultARCAlgorithm.h  DefaultLRUAlgorithm.h  FastARCAlgorithm.h  FastLRUAlgorithm.h  LRUAlgorithm.h  RandomAlgorithm.h  ReplacementAlgorithm.h
stream/src/utils/: FrequentStatistics.h  QuantileStatistics.h  RealKVKeyToHash.h  StringUtil.h
stream/tests/: ClickStreamGenerator.cpp  ClickStreamStatistics.cpp  GK_EfficiencyTest.cpp  MCWorkloadStatistics.cpp  QuantilePointGenerator.cpp  SerialHeaveyHitterTest.cpp  SerialSSTest.cpp  ZipfianVerification.cpp
stream/tests/cfrequent/: QuantileVerification.cpp
stream/tests/heavyhitter/: ClickStreamHashEfficiency.cpp  Frequency_UnitTest.cpp  GeneralLayzSS_MappingTest.cpp  GeneralLazySS_MappingTest.cpp  GeneralLazySS_UnitTest.cpp  ParallelGLSSEfficiency.cpp  WOGeneralSSEfficiency.cpp
stream/tests/quantile/: Frequency_UnitTest.cpp  GK_UnitTest.cpp  OPTHH_UnitTest.cpp
stream/tests/replacealgo/: ARCAlgorithmTest.cpp  CodingNumericTest.cpp  ConciseTest.cpp  HotspotDiffHitTest.cpp  InterArrivalTest.cpp  MaxDeltaTest.cpp  MergeGeneralAltorithmTest.cpp  PriorityQueueTest.cpp  RemovingHotspotTest.cpp  RemovingPrimitiveTest.cpp  ReplacementAlgorithmTest.cpp
tests/: AA_MicroTest.cpp  AH_MicroTest.cpp  CH_MicroTest.cpp  FH_MicroCTest.cpp  FH_MicroTest.cpp  FH_StableRUTest.cpp  JH_MicroTest.cpp  LH_MicroTest.cpp  MH_MicroTest.cpp  OH_MicroTest.cpp
tests/AWL_Unit/: awlmap_Usage.cpp
tests/BWT_Unit/: CMakeLists.txt  main.cpp  test_suite.cpp  test_suite.h
tests/CF2_Unit/: CUCKOO_EffTest.cpp  CUCKOO_Intention.cpp  CUCKOO_Usage.cpp  Faster_AtomicUsage.cpp  Faster_Epoch.cpp  Faster_VCUsage.cpp  Folly_Usage.cpp  Junction_Usage.cpp  Level_Usage.cpp  Murmur3_Collision.cpp
tests/FH_Unit/: Faster_AtomicUsage.cpp  Faster_VCUsage.cpp  faster_function_test.cpp  faster_struct_test.cpp  in_memory_test.cpp  serializable_test.cpp
tests/MH_Efficiency/: AlignasEffectsOnAtom.cpp  ConcurrentHashMapTest.cpp  EpochBenchmark.cpp  EpochBzUsageTest.cpp  EpochTBUsageTest.cpp  EpochUsageTest.cpp  HazardDummyTest.cpp  HazardNumaDummyTest.cpp  HazardRWDummyTest.cpp
tests/MicroBench/: AH_HybridIdeaTest.cpp  AH_HybridNumaTest.cpp  AH_HybridTest.cpp  BH_HyridTest.cpp  CH_HybridIdeaTest.cpp  CH_HybridNumaTest.cpp  CH_HybridTest.cpp  CMakeLists.txt  FH_HybridIdeaTest.cpp  FH_HybridNumaTest.cpp  FH_HybridTest.cpp  JH_HybridTest.cpp  LH_HybridTest.cpp  OH_HybridTest.cpp
tests/NUMA_Unit/: BST_MicroTest.cpp  BST_UsageTest.cpp  NUMA_dummy_test.cpp
tests/PM_Unit/: Quartz_Usage.cpp
tests/Pure/: AA_MicroTest.cpp  AH_MicroTest.cpp  FH_MicroCTest.cpp  FH_MicroDeleteTest.cpp  FH_MicroGrowingTest.cpp  FH_MicroTest.cpp  JH_MicroTest.cpp  OH_MicroTest.cpp
tests/YCSB/: MH_YCSB.cpp
tests/YCSBBench/: AH_MicroBench.cpp  AH_YCSBIterativeTest.cpp  AH_YCSBTest.cpp  CH_MicroBench.cpp  CH_YCSBTest.cpp  CMakeLists.txt  FH_MicroBench.cpp  FH_YCSBTest.cpp  HasherComparison.cpp  IH_YCSBTest.cpp  JH_MicroBench.cpp  JH_YCSBTest.cpp  LC_YCSBTest.cpp  LC_YCSBTest1.cpp  LH_MicroBench.cpp  LH_YCSBTest.cpp  OH_MicroBench.cpp  OH_YCSBTest.cpp
utils/: CacheSteppingAtomicTest.cpp  CacheSteppingTest.cpp  DistributionTool.cpp  DummyTest.cpp  GeneralMapTest.cpp  MH_UnitTest.cpp  MallocTest.cpp  ProducerTest.cpp  UH_UnitTest.cpp  XH_UnitTest.cpp  XT_UnitTest.cpp  YCSBLoader_UnitTest.cpp  ZT_UnitTest.cpp
utils/numaopm/: CMakeLists.txt  numa-naivetest.cpp  numa-test.cpp  timing.h
utils/pmtest/: CMakeLists.txt
utils/pmtest/basis/: alias.c  config.h  nvram.c  nvram.h  pmalloc.cpp  pnvram.c  test.c
(+48 files in other folders)
